# src/swagger-new.json
@@ -491,6 +491,27 @@
         }
       }
     },
+    "/comercializador/upload/{id}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/desconto/": {
       "get": {
         "tags": [
